# Docwise

./: README.MD  docker-compose.yml  pyproject.toml
alembic/: README  env.py
alembic/versions/: 30190cbe7fb9_create_user_table.py  af89e18f6bfc_added_created_date.py
app/: main.py
app/api/dependencies/: db.py
app/api/routes/: auth.py
app/core/: config.py
app/db/: __init__.py  session.py
app/models/: auth.py  example.py
app/schemas/: example.py
